Fix select/button width on iOS

--- a/style.css
+++ b/style.css
@@ -16,9 +16,11 @@ body {
 
 button {
   margin: 0;
+  padding: 0;
   border: 0;
   background-color: white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-appearance: button;
 }
 
 button:hover {
@@ -104,7 +106,7 @@ select:focus-visible {
 
 .map-select {
   display: inline-block;
-  max-width: 300px;
+  width: 300px;
   height: 50px;
   padding-right: 34px;
   padding-left: 8px;
